--- a/SmartWinControls/SmartWinControls.csproj
+++ b/SmartWinControls/SmartWinControls.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Basement\WinAPI.cs" />
     <Compile Include="Common\SmartControlType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
